--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,8 +8,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    
+    <nav class ="navbar">
+        <div class="max-width">
+            <div class="logo">
+                <a href="#">
+                    <img src="../ASSETS/IMAGES/Processed business logo.png" alt="logo" width="80" height="63">
+                </a>
+            </div>
+            <ul class = "menu">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
