--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,7 @@
                 </a>
             </div>
             <ul class = "menu">
+                <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
@@ -26,5 +27,18 @@
             </ul>
         </div>
     </nav>
+
+    <!--home section-->
+    <section class = "home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Luyanda Nene</div>
+                <div class="text-3">And I'm a <span>Front-End Web Developer</span></div>
+                <button>Download CV</button>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
