--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
+    
+    <div id="cont">
+        <div id="square">
+        
+        </div>
+      </div>
+
     <nav class ="navbar">
         <div class="max-width">
             <div class="logo">
