included download feature

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -41,7 +41,9 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Luyanda Nene</div>
                 <div class="text-3">And I'm a <span>Front-End Web Developer</span></div>
-                <button>Download CV</button>
+                <a href="../ASSETS/Luyanda Nene CV.pdf" download="Luyanda Nene CV" target="_blank">
+                    <button>Download CV</button>
+                </a>
             </div>
         </div>
     </section>
