--- a/HTML/index.html
+++ b/HTML/index.html
@@ -48,6 +48,17 @@
         </div>
     </section>
 
+    <!--about section-->
+    <section class = "about" id="about">
+        <div class="max-width">
+            <div class="about-content">
+                <div class="column-left">
+                    <img src="../ASSETS/IMAGES/Luyanda suit picture.jpg" alt="picture of Luyanda">
+                </div>
+            </div>  
+        </div>
+    </section>
+
 <script src="../JS/script.js"></script>
 </body>
 </html>
