--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,8 +51,9 @@
     <!--about section-->
     <section class = "about" id="about">
         <div class="max-width">
+            <h2 class="title">About me</h2>
             <div class="about-content">
-                <div class="column-left">
+                <div class="column left">
                     <img src="../ASSETS/IMAGES/Luyanda suit picture.jpg" alt="picture of Luyanda">
                 </div>
             </div>  
