wrote about section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -56,6 +56,19 @@
                 <div class="column left">
                     <img src="../ASSETS/IMAGES/Luyanda suit picture.jpg" alt="picture of Luyanda">
                 </div>
+                <div class="column right">
+                    <div class="text">
+                        <p>I am a recent graduate from North West University that holds a Bachelor of Science in Information Technology. 
+                            I believe this degree, along with my growing skills will take me far in life as we are rapidly moving into a digital age.
+                            During my undergraduate years, I enjoyed modules such as systems analysis, 
+                            advanced databases, user interface programming, and data analytics. 
+                            After completing my degree, I noticed that I did not have solid and implementable skills and saw the need to change and grow.
+                            I decided to start my journey of properly learning front-end development which I'm currently doing. 
+                            I believe in clever work and effective planning to drive desired results. 
+                            Other than programming skills, I am advancing my soft skills as I know they are what makes a person succeed in a personal, social, and work environment.
+                        </p>
+                    </div>
+                </div>
             </div>  
         </div>
     </section>
