about section done

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -58,14 +58,13 @@
                 </div>
                 <div class="column right">
                     <div class="text">
-                        <p>I am a recent graduate from North West University that holds a Bachelor of Science in Information Technology. 
-                            I believe this degree, along with my growing skills will take me far in life as we are rapidly moving into a digital age.
-                            During my undergraduate years, I enjoyed modules such as systems analysis, 
-                            advanced databases, user interface programming, and data analytics. 
-                            After completing my degree, I noticed that I did not have solid and implementable skills and saw the need to change and grow.
-                            I decided to start my journey of properly learning front-end development which I'm currently doing. 
-                            I believe in clever work and effective planning to drive desired results. 
-                            Other than programming skills, I am advancing my soft skills as I know they are what makes a person succeed in a personal, social, and work environment.
+                        Luyanda Nene
+                        <p>I recently graduated from North West University with a Bachelor of Science in Information Technology. 
+                            I am confident that this degree, coupled with my growing skills, will take me far in life as we are rapidly moving into a digital age.
+                            A number of courses I enjoyed during my undergraduate studies were systems analysis, 
+                            advanced databases, user interface programming, and data analytics.  
+                            My philosophy is to drive desired results through clever work and effective planning.
+                            I am currently developing both my technical, and soft skills as I believe this combination is vital to the business and social environment.
                         </p>
                     </div>
                 </div>
