started with skills section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -72,6 +72,51 @@
         </div>
     </section>
 
+
+    <!--skills section-->
+    <section class = "skills" id= "skills">
+        <div class="max-width">
+            <h2 class="title">My Skills</h2>
+            <div class="skills-content">
+                <div class="bars">
+                    <div class="info">
+                        <span>HTML</span>
+                    </div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>CSS</span>
+                    </div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Java</span>
+                    </div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>MySQL</span>
+                    </div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Database design</span>
+                    </div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Use Case Modelling</span>
+                    </div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Adobe Lightroom</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 <script src="../JS/script.js"></script>
 </body>
 </html>
