updated skills section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -82,36 +82,43 @@
                     <div class="info">
                         <span>HTML</span>
                     </div>
+                    <div class="line html"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>CSS</span>
                     </div>
+                    <div class="line css"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>Java</span>
                     </div>
+                    <div class="line java"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>MySQL</span>
                     </div>
+                    <div class="line mysql"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>Database design</span>
                     </div>
+                    <div class="line database"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>Use Case Modelling</span>
                     </div>
+                    <div class="line modelling"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>Adobe Lightroom</span>
                     </div>
+                    <div class="line lightroom"></div>
                 </div>
             </div>
         </div>
