changed image for about section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,7 +54,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="../ASSETS/IMAGES/Luyanda suit picture.jpg" alt="picture of Luyanda">
+                    <img src="../ASSETS/IMAGES/Luyanda suit picture.png" alt="picture of Luyanda">
                 </div>
                 <div class="column right">
                     <div class="text">
@@ -78,47 +78,57 @@
         <div class="max-width">
             <h2 class="title">My Skills</h2>
             <div class="skills-content">
-                <div class="bars">
-                    <div class="info">
-                        <span>HTML</span>
+                <div class="column left">
+                    <div class="text">
+                        <p>
+                            "The world’s most successful people aren’t busy, they’re focused. Specifically, they’re focused on mastering a diverse set of skills that will elevate them into elite status and mastery."
+                        </p>
                     </div>
-                    <div class="line html"></div>
+                    <img src="../ASSETS/IMAGES/skill.jpeg" alt="">
                 </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>CSS</span>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                        </div>
+                        <div class="line html"></div>
                     </div>
-                    <div class="line css"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>Java</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                        </div>
+                        <div class="line css"></div>
                     </div>
-                    <div class="line java"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>MySQL</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Java</span>
+                        </div>
+                        <div class="line java"></div>
                     </div>
-                    <div class="line mysql"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>Database design</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>MySQL</span>
+                        </div>
+                        <div class="line mysql"></div>
                     </div>
-                    <div class="line database"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>Use Case Modelling</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Database design</span>
+                        </div>
+                        <div class="line database"></div>
                     </div>
-                    <div class="line modelling"></div>
-                </div>
-                <div class="bars">
-                    <div class="info">
-                        <span>Adobe Lightroom</span>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Use Case Modelling</span>
+                        </div>
+                        <div class="line modelling"></div>
                     </div>
-                    <div class="line lightroom"></div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Adobe Lightroom</span>
+                        </div>
+                        <div class="line lightroom"></div>
+                    </div>
                 </div>
             </div>
         </div>
