started with projects page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,13 +17,13 @@
     <nav class ="navbar">
         <div class="max-width">
             <div class="logo">
-                <a href="#">
+                <a href="#home">
                     <img src="../ASSETS/IMAGES/Processed business logo.png" alt="logo" width="80" height="63">
                 </a>
             </div>
             <ul class = "menu">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Hobbies</a></li>
                 <li><a href="#">Contact</a></li>
@@ -128,6 +128,31 @@
                             <span>Adobe Lightroom</span>
                         </div>
                         <div class="line lightroom"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--projects section-->
+    <section class="projects" id="projects">
+        <div class="max-width">
+            <h2 class="title">My Work</h2>
+            <div class="projects-content">
+                <div class="project-list">
+                    <div class="work">
+                        <img src="../ASSETS/IMAGES/ace.jpg" alt="">
+                        <div class="layer">
+                            <h3>Company Website</h3>
+                            <p>This a fully responsive company website. It displays all relevant information for a construction company called Andy's Consulting Engineers.</p>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="../ASSETS/IMAGES/magnifier.jpg" alt="">
+                        <div class="layer">
+                            <h3>Technical Resume</h3>
+                            <p>This is my online resume which I created using HTML and CSS. The IDE used is Visual Studio Code.</p>
+                        </div>
                     </div>
                 </div>
             </div>
