--- a/HTML/index.html
+++ b/HTML/index.html
@@ -144,6 +144,7 @@
                     <div class="layer">
                         <h3>Company Website</h3>
                         <p>This a fully responsive company website. It displays all relevant information for a construction company called Andy's Consulting Engineers.</p>
+                        <a href=""><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -151,6 +152,7 @@
                     <div class="layer">
                         <h3>Technical Resume</h3>
                         <p>This is my online resume which I created using HTML and CSS. The IDE used is Visual Studio Code.</p>
+                        <a href=""><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
             </div>
