updated home page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -40,7 +40,8 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Luyanda Nene</div>
-                <div class="text-3">And I'm a <span>Front-End Web Developer</span></div>
+                <div class="text-3">SQA Engineer by day,</div>
+                <div class="text-3">Web Developer by night.</div>
                 <a href="../ASSETS/Luyanda Nene CV.pdf" download="Luyanda Nene CV" target="_blank">
                     <button>Download CV</button>
                 </a>
