added button on about page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,19 +55,19 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="../ASSETS/IMAGES/Luyanda suit picture.png" alt="picture of Luyanda">
+                    <img src="../ASSETS/IMAGES/image (2).png" alt="picture of Luyanda">
                 </div>
                 <div class="column right">
                     <div class="text">
                         Luyanda Nene
-                        <p>I recently graduated from North West University with a Bachelor of Science in Information Technology. 
-                            I am confident that this degree, coupled with my growing skills, will take me far in life as we are rapidly moving into a digital age.
-                            A number of courses I enjoyed during my undergraduate studies were systems analysis, 
-                            advanced databases, user interface programming, and data analytics.  
-                            My philosophy is to drive desired results through clever work and effective planning.
-                            I am currently developing both my technical, and soft skills as I believe this combination is vital to the business and social environment.
+                        <p>I am an ambitious young man from South Africa who sees no limits to what he can achieve. I recently graduated from the North West University and acquired a Bachelor of Sceince in Information Technology degree.
+                            I am confident that this degree, coupled with my growing skills and experience, will take me far in life as we are rapidly moving into a digital age.
                         </p>
+                        <br>
+                        <p>My philosophy is to drive desired results through clever work and effective planning.
+                            As a result of my indefatigability, I continue to acquire new skills and knowledge, which increases my competence in a wide range of human endeavors.</p>
                     </div>
+                    <button>Work with me</button>
                 </div>
             </div>  
         </div>
