modify skiils and about section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,8 +42,8 @@
                 <div class="text-2">Luyanda Nene</div>
                 <div class="text-3">SQA Engineer by day,</div>
                 <div class="text-3">Web Developer by night.</div>
-                <a href="../ASSETS/Luyanda Nene CV.pdf" download="Luyanda Nene CV" target="_blank">
-                    <button>Download CV</button>
+                <a href="#">
+                    <button>Get in touch</button>
                 </a>
             </div>
         </div>
@@ -60,14 +60,19 @@
                 <div class="column right">
                     <div class="text">
                         Luyanda Nene
-                        <p>I am an ambitious young man from South Africa who sees no limits to what he can achieve. I recently graduated from the North West University and acquired a Bachelor of Sceince in Information Technology degree.
-                            I am confident that this degree, coupled with my growing skills and experience, will take me far in life as we are rapidly moving into a digital age.
+                        <p>I am an ambitious SQA Engineer from South Africa who sees no limits to what he can achieve. I am quite familiar and skillled in multiple areas within testing such as test automation,
+                            test analysis, as well as performance testing. I intend on becoming the best SQA Engineer this country has seen.
+                            I am also a self taught web developer who likes to turn ideas into code.
+                            I graduated from the North West University and acquired a Bachelor of Sceince in Information Technology degree.
+                            
                         </p>
                         <br>
                         <p>My philosophy is to drive desired results through clever work and effective planning.
                             As a result of my indefatigability, I continue to acquire new skills and knowledge, which increases my competence in a wide range of human endeavors.</p>
                     </div>
-                    <button>Work with me</button>
+                    <a href="../ASSETS/Luyanda Nene CV.pdf" download="Luyanda Nene CV" target="_blank">
+                        <button>Download CV</button>
+                    </a>
                 </div>
             </div>  
         </div>
@@ -90,43 +95,43 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>HTML</span>
+                            <span>Java</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>CSS</span>
+                            <span>Selenium Wedriver</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Java</span>
+                            <span>Test Automation</span>
                         </div>
                         <div class="line java"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MySQL</span>
+                            <span>HTML</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Database design</span>
+                            <span>SQL</span>
                         </div>
                         <div class="line database"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Use Case Modelling</span>
+                            <span>HTML</span>
                         </div>
                         <div class="line modelling"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Adobe Lightroom</span>
+                            <span>Jmeter</span>
                         </div>
                         <div class="line lightroom"></div>
                     </div>
