add hobbies title

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -150,17 +150,19 @@
                     <div class="layer">
                         <h3>Company Website</h3>
                         <p>This a fully responsive company website. It displays all relevant information for a construction company called Andy's Consulting Engineers.</p>
-                        <a href=""><i class="fa-solid fa-link"></i></a>
+                        <a href="https://blankengineers.netlify.app"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
-                <div class="work">
-                    <img src="../ASSETS/IMAGES/magnifier.jpg" alt="">
-                    <div class="layer">
-                        <h3>Technical Resume</h3>
-                        <p>This is my online resume which I created using HTML and CSS. The IDE used is Visual Studio Code.</p>
-                        <a href=""><i class="fa-solid fa-link"></i></a>
-                    </div>
-                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Hobbies section-->
+    <section class="hobbies" id="hobbies">
+        <div class="max-width">
+            <h2 class="title">Hobbies</h2>
+            <div class="hobbies-content">
+                
             </div>
         </div>
     </section>
