--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <title>Luyanda's Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
@@ -25,7 +27,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Hobbies</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -157,13 +159,39 @@
         </div>
     </section>
 
-    <!--Hobbies section-->
-    <section class="hobbies" id="hobbies">
+    <!--services section-->
+    <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">Hobbies</h2>
-            <div class="hobbies-content">
-                
+            <h2 class="title">Services</h2>
+            <div class="services-content">
+              <div class="row">
+                <div class="service">
+                  <i class="fas fa-laptop-code"></i>
+                  <h2>Web Design</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+                    quae?
+                  </p>
+                </div>
+                <div class="service">
+                  <i class="fas fa-database"></i>
+                  <h2>Data Analysis</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+                    quae?
+                  </p>
+                </div>
+                <div class="service">
+                  <i class="fas fa-mobile-alt"></i>
+                  <h2>App Development</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+                    quae?
+                  </p>
+                </div>
+              </div>
             </div>
+
         </div>
     </section>
 
